update pom for ok building